# goxlr-obs-fader-sync

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
