[package]
name = "goxlr-obs-fader-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obws = {version = "0.10.0", features=["events"] }

anyhow = "1.0.66"
tokio = {version = "1.22.0", features=["full"]}

url = "2.3.1"
futures-util = "0.3.25"
tokio-tungstenite = "0.18.0"

json-patch = "0.3.0"
serde_json = "1.0.89"
serde = { version = "1.0.148", features=["derive"] }

# Grab the GoXLR Structures
interprocess = "1.2.1"
goxlr-ipc = { git="https://github.com/GoXLR-on-Linux/goxlr-utility.git", branch="dev-0.9.0" }
goxlr-types = { git="https://github.com/GoXLR-on-Linux/goxlr-utility.git", branch="dev-0.9.0", features=["serde"] }
