[package]
name = "goxlr-obs-fader-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obws = {version = "0.11.5", features=["events"] }

anyhow = "1.0.77"
tokio = {version = "1.23.0", features=["full"]}

url = "2.5.0"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"

json-patch = "1.2.0"
serde_json = "1.0.108"
serde = { version = "1.0.148", features=["derive"] }

# Grab the GoXLR Structures
interprocess = "1.2.1"
strum = "0.25.0"
goxlr-ipc = { git="https://github.com/GoXLR-on-Linux/goxlr-utility.git" }
goxlr-types = { git="https://github.com/GoXLR-on-Linux/goxlr-utility.git", features=["serde"] }

# For lazy Initialisation of the Channels
once_cell = "1.19.0"